--- a/Historic Report Card Processing.ipynb
+++ b/Historic Report Card Processing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,24 +515,6 @@
     "\n",
     "\n",
     "pd.DataFrame(results)#.to_clipboard()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "master_data.query(\"Year == 2018\").loc[:,'% 8th Grade Passing Algebra 1']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "report_card[2018]['%8th Grade passing Algebra 1']"
    ]
   },
   {
@@ -957,7 +939,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_to_file = True\n",
+    "write_to_file = False\n",
     "\n",
     "if write_to_file:\n",
     "    if 'REPORT_CARD' in globals() or 'report_card' in globals():\n",
