Added EBF Tier and % Adequacy. This required including the Finance tab, which has duplicate RCDTS values. Duplicate RCDTS values do not have financial information in the historic report card (they were dropped)

--- a/Historic Report Card Processing.ipynb
+++ b/Historic Report Card Processing.ipynb
@@ -97,11 +97,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "OVERWRITE_INVENTORY=False\n",
+    "OVERWRITE_INVENTORY=True\n",
     "ALL_IN_ONE=True\n",
     "WRITE_TO_FILE=True"
    ]
@@ -358,12 +358,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 17/17 [02:46<00:00,  9.79s/it]\n"
+      "  0%|          | 0/17 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 17/17 [02:47<00:00,  9.85s/it]\n"
      ]
     }
    ],
    "source": [
     "report_card = {}\n",
+    "dropped_finance_rcdts = {}\n",
     "\n",
     "if 'REPORT_CARD' in globals():\n",
     "    report_card = copy.deepcopy(REPORT_CARD)\n",
@@ -386,7 +394,12 @@
     "\n",
     "            report_card[year] = wkbk['General'].copy()\n",
     "\n",
-    "            for k in filter(lambda x: x not in ['General', 'Finance'], wkbk.keys()):\n",
+    "            for k in filter(lambda x: x not in ['General'], wkbk.keys()):\n",
+    "                if k == \"Finance\":\n",
+    "                    rcdts_counts = wkbk[k]['RCDTS'].value_counts()\n",
+    "                    duplicate_rcdts = rcdts_counts[rcdts_counts > 1].index\n",
+    "                    dropped_finance_rcdts[year] = duplicate_rcdts\n",
+    "                    wkbk[k] = wkbk[k].drop(wkbk[k]['RCDTS'].isin(duplicate_rcdts).index)\n",
     "                report_card[year] = pd.merge(\n",
     "                    report_card[year], wkbk[k], on='RCDTS', how='outer', validate=\"1:1\", suffixes=('', f\"_{k}\"))\n",
     "\n",
@@ -412,6 +425,30 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'110238000800001', '310458000802001', '540928000800001'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = set()\n",
+    "for i in list(map(lambda x: list(x), dropped_finance_rcdts.values())):\n",
+    "    for j in i:\n",
+    "        s.add(j)\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "crosswalk = pd.read_excel(\n",
@@ -435,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -459,78 +496,129 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2008</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2009</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2011</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2012</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018</th>\n",
+       "      <td>EBF Tier</td>\n",
+       "      <td>EBF Capacity to Meet Expectations</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019</th>\n",
+       "      <td>EBF Tier</td>\n",
+       "      <td>% EBF Capacity to Meet Expectations</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020</th>\n",
+       "      <td>EBF Tier</td>\n",
+       "      <td>% EBF Capacity to Meet Expectations</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021</th>\n",
+       "      <td>EBF Tier</td>\n",
+       "      <td>% EBF Capacity to Meet Expectations</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022</th>\n",
+       "      <td>EBF Tier</td>\n",
+       "      <td>% EBF Capacity to Meet Expectations</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023</th>\n",
+       "      <td>EBF Tier</td>\n",
+       "      <td>% EBF Capacity to Meet Expectations</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2024</th>\n",
+       "      <td>EBF Tier</td>\n",
+       "      <td>% EBF Capacity to Meet Expectations</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: [2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020, 2021, 2022, 2023, 2024]"
+       "             0                                    1\n",
+       "2008       NaN                                  NaN\n",
+       "2009       NaN                                  NaN\n",
+       "2010       NaN                                  NaN\n",
+       "2011       NaN                                  NaN\n",
+       "2012       NaN                                  NaN\n",
+       "2013       NaN                                  NaN\n",
+       "2014       NaN                                  NaN\n",
+       "2015       NaN                                  NaN\n",
+       "2016       NaN                                  NaN\n",
+       "2017       NaN                                  NaN\n",
+       "2018  EBF Tier    EBF Capacity to Meet Expectations\n",
+       "2019  EBF Tier  % EBF Capacity to Meet Expectations\n",
+       "2020  EBF Tier  % EBF Capacity to Meet Expectations\n",
+       "2021  EBF Tier  % EBF Capacity to Meet Expectations\n",
+       "2022  EBF Tier  % EBF Capacity to Meet Expectations\n",
+       "2023  EBF Tier  % EBF Capacity to Meet Expectations\n",
+       "2024  EBF Tier  % EBF Capacity to Meet Expectations"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# EXPLORATORY CELL\n",
-    "search_string = \"fip\".upper()\n",
+    "search_string = \"EBF\".upper()\n",
     "\n",
     "results = []\n",
     "\n",
@@ -552,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,14 +830,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 17/17 [02:41<00:00,  9.52s/it]\n"
+      "100%|██████████| 17/17 [02:46<00:00,  9.82s/it]\n"
      ]
     }
    ],
@@ -827,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +948,7 @@
        " 2024: []}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,11 +1038,14 @@
     "demo_inventory = demo_inventory.astype(bool)\n",
     "demo_inventory = pd.merge(demo_inventory.reset_index(),demo_info[['Year','Metric','Index','Category']],how='left',on=['Year','Metric'])\n",
     "demo_inventory.loc[demo_inventory['Metric'] == 'Type', 'Category'] = 'Identifier'\n",
-    "demo_inventory.loc[demo_inventory['Metric'] == 'Type', 'Index'] = 2\n",
+    "type_index = demo_inventory.loc[demo_inventory['Metric'] == 'Type', 'Index'].iloc[0]\n",
+    "demo_inventory.loc[demo_inventory['Metric'] == 'Type', 'Index'] = type_index\n",
     "demo_inventory.loc[demo_inventory['Metric'] == '% Teachers', 'Category'] = 'Teachers-Admin'\n",
-    "demo_inventory.loc[demo_inventory['Metric'] == '% Teachers', 'Index'] = 14\n",
+    "teacher_index = demo_inventory.loc[demo_inventory['Metric'] == 'Total Teacher FTE', 'Index'].iloc[0]\n",
+    "demo_inventory.loc[demo_inventory['Metric'] == '% Teachers', 'Index'] = teacher_index\n",
     "demo_inventory.loc[demo_inventory['Metric'] == '% Student Enrollment', 'Category'] = 'Enrollment-Attendance'\n",
-    "demo_inventory.loc[demo_inventory['Metric'] == '% Student Enrollment', 'Index'] = 9\n",
+    "enrollment_index = demo_inventory.loc[demo_inventory['Metric'] == 'Student Enrollment', 'Index'].iloc[0]\n",
+    "demo_inventory.loc[demo_inventory['Metric'] == '% Student Enrollment', 'Index'] = enrollment_index\n",
     "demo_inventory['Index'] = demo_inventory['Index'].astype(int)\n",
     "\n",
     "demo_inventory = demo_inventory[['Index','Category','Metric','Year','Disaggregated','All'] + DEMOGRAPHICS]\n",
@@ -963,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,17 +1112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The original dataframe and the new dataframe are identical.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# COMPARING THE ACTUAL INVENTORIES\n",
     "dataframe_differences(DEMO_INVENTORY,demo_inventory)"
@@ -1039,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1051,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1093,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1125,9 +1208,9 @@
     "\n",
     "    excel_writer = pd.ExcelWriter(path)\n",
     "\n",
-    "    toc = demo_info.groupby(['Metric', 'Category'])[\n",
-    "        'Disaggregated'].max().reset_index()\n",
-    "    toc = toc.set_index('Category', drop=True)\n",
+    "    toc = demo_info.groupby(['Metric', 'Category'])[[\n",
+    "        'Disaggregated', 'Index']].max().reset_index()\n",
+    "    toc = toc.set_index('Category', drop=True).sort_values(by='Index').drop(columns='Index')\n",
     "    toc = toc.loc[list(cat_walk.index), ['Metric', 'Disaggregated']]\n",
     "    toc = pd.merge(toc, (data.groupby(['Year']).count() > 1).replace(\n",
     "        {False: '', True: 'X'}).T, how='left', left_on='Metric', right_index=True)\n",
@@ -1151,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,14 +1244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [01:25<00:00,  8.56s/it]\n"
+      "100%|██████████| 10/10 [01:18<00:00,  7.90s/it]\n"
      ]
     }
    ],
@@ -1183,14 +1266,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [11:10<00:00, 67.01s/it]\n"
+      "100%|██████████| 10/10 [13:43<00:00, 82.32s/it] \n"
      ]
     }
    ],
