--- a/Historic Report Card Processing.ipynb
+++ b/Historic Report Card Processing.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 17/17 [02:47<00:00,  9.85s/it]\n"
+      "100%|██████████| 17/17 [02:39<00:00,  9.39s/it]\n"
      ]
     }
    ],
@@ -397,9 +397,9 @@
     "            for k in filter(lambda x: x not in ['General'], wkbk.keys()):\n",
     "                if k == \"Finance\":\n",
     "                    rcdts_counts = wkbk[k]['RCDTS'].value_counts()\n",
-    "                    duplicate_rcdts = rcdts_counts[rcdts_counts > 1].index\n",
+    "                    duplicate_rcdts = list(rcdts_counts[rcdts_counts > 1].index)\n",
     "                    dropped_finance_rcdts[year] = duplicate_rcdts\n",
-    "                    wkbk[k] = wkbk[k].drop(wkbk[k]['RCDTS'].isin(duplicate_rcdts).index)\n",
+    "                    wkbk[k] = wkbk[k].loc[~(wkbk[k]['RCDTS'].isin(duplicate_rcdts)),:]\n",
     "                report_card[year] = pd.merge(\n",
     "                    report_card[year], wkbk[k], on='RCDTS', how='outer', validate=\"1:1\", suffixes=('', f\"_{k}\"))\n",
     "\n",
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
        "{'110238000800001', '310458000802001', '540928000800001'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
        "2024  EBF Tier  % EBF Capacity to Meet Expectations"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,14 +830,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 17/17 [02:46<00:00,  9.82s/it]\n"
+      "100%|██████████| 17/17 [02:41<00:00,  9.50s/it]\n"
      ]
     }
    ],
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
        " 2024: []}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,9 +1112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The original dataframe and the new dataframe are identical.\n"
+     ]
+    }
+   ],
    "source": [
     "# COMPARING THE ACTUAL INVENTORIES\n",
     "dataframe_differences(DEMO_INVENTORY,demo_inventory)"
@@ -1122,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1190,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,14 +1252,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [01:18<00:00,  7.90s/it]\n"
+      "100%|██████████| 10/10 [01:14<00:00,  7.48s/it]\n"
      ]
     }
    ],
@@ -1266,14 +1274,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [13:43<00:00, 82.32s/it] \n"
+      "100%|██████████| 10/10 [11:20<00:00, 68.05s/it]\n"
      ]
     }
    ],
