--- a/Historic Report Card Processing.ipynb
+++ b/Historic Report Card Processing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,8 +66,15 @@
     "       'American Indian or Alaska Native',\n",
     "       'Native Hawaiian or Other Pacific Islander', 'Two or More Races',\n",
     "       'EL', 'IEP', 'Children with Disabilities', 'Low Income', 'Migrant', \n",
-    "       'Homeless', 'Youth in Care', 'Unknown']\n",
-    "\n",
+    "       'Homeless', 'Youth in Care', 'Unknown']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "DEMO_INVENTORY = pd.read_excel('./Demographic Inventory.xlsx')\n",
     "DEMO_INVENTORY['Index'] = DEMO_INVENTORY['Index'].astype(int)\n",
     "DEMO_INVENTORY['Year'] = DEMO_INVENTORY['Year'].astype(int)"
@@ -75,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,13 +104,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "OVERWRITE_INVENTORY=False\n",
+    "OVERWRITE_INVENTORY=True\n",
     "ALL_IN_ONE=True\n",
-    "WRITE_TO_FILE=False"
+    "WRITE_TO_FILE=True"
    ]
   },
   {
@@ -115,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +424,7 @@
        "set()"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1271,7 @@
        "[17 rows x 36 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1344,6 +1351,8 @@
     "        '% ISA Proficiency - Male %', '% ISA Proficiency - Male')\n",
     "    report_card[year].columns = report_card[year].columns.str.replace(\n",
     "        'ELA Growth Percentile - White Growth', 'ELA Growth Percentile - White')\n",
+    "    report_card[year].columns = report_card[year].columns.str.replace(\n",
+    "        'Math Growth  Percentile - Native Hawaiian or Other Pacific Islander', 'Math Growth Percentile - Native Hawaiian or Other Pacific Islander')\n",
     "\n",
     "for year in range(2019, END_YEAR + 1):\n",
     "    report_card[year] = report_card[year].rename(\n",
@@ -1359,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1441,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1470,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1485,14 +1494,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 17/17 [02:57<00:00, 10.43s/it]\n"
+      "100%|██████████| 17/17 [02:56<00:00, 10.37s/it]\n"
      ]
     }
    ],
@@ -1570,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1612,7 @@
        " 2024: []}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1625,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1637,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1661,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1680,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1767,15 +1776,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The original dataframe and the new dataframe are identical.\n"
+      "The column names are the same, and they are in the same order.\n",
+      "The new dataframe and the original dataframe have the same number of rows.\n",
+      "The sorted dataframes have the following index-agnostic differences in data:\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Asian</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Black</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Latinx</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">American Indian or Alaska Native</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Native Hawaiian or Other Pacific Islander</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Two or More Races</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Children with Disabilities</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Youth in Care</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>self</th>\n",
+       "      <th>other</th>\n",
+       "      <th>self</th>\n",
+       "      <th>other</th>\n",
+       "      <th>self</th>\n",
+       "      <th>other</th>\n",
+       "      <th>self</th>\n",
+       "      <th>other</th>\n",
+       "      <th>self</th>\n",
+       "      <th>other</th>\n",
+       "      <th>self</th>\n",
+       "      <th>other</th>\n",
+       "      <th>self</th>\n",
+       "      <th>other</th>\n",
+       "      <th>self</th>\n",
+       "      <th>other</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1137</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1138</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1142</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1143</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Asian        Black        Latinx        American Indian or Alaska Native  \\\n",
+       "      self  other  self  other   self  other                             self   \n",
+       "1137  True  False  True  False   True  False                             True   \n",
+       "1138   NaN    NaN   NaN    NaN    NaN    NaN                              NaN   \n",
+       "1142   NaN    NaN   NaN    NaN   True  False                              NaN   \n",
+       "1143   NaN    NaN   NaN    NaN    NaN    NaN                              NaN   \n",
+       "\n",
+       "            Native Hawaiian or Other Pacific Islander         \\\n",
+       "      other                                      self  other   \n",
+       "1137  False                                      True  False   \n",
+       "1138    NaN                                       NaN    NaN   \n",
+       "1142    NaN                                      True  False   \n",
+       "1143    NaN                                       NaN    NaN   \n",
+       "\n",
+       "     Two or More Races        Children with Disabilities        Youth in Care  \\\n",
+       "                  self  other                       self  other          self   \n",
+       "1137              True  False                       True  False          True   \n",
+       "1138               NaN    NaN                        NaN    NaN          True   \n",
+       "1142               NaN    NaN                        NaN    NaN          True   \n",
+       "1143               NaN    NaN                        NaN    NaN          True   \n",
+       "\n",
+       "             \n",
+       "      other  \n",
+       "1137  False  \n",
+       "1138  False  \n",
+       "1142  False  \n",
+       "1143  False  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1785,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1797,7 +1972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1818,6 +1993,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1137                IAR ELA Growth Percentile\n",
+       "1138                IAR ELA Growth Percentile\n",
+       "1139                IAR ELA Growth Percentile\n",
+       "1140                IAR ELA Growth Percentile\n",
+       "1141                IAR ELA Growth Percentile\n",
+       "1142               IAR Math Growth Percentile\n",
+       "1143               IAR Math Growth Percentile\n",
+       "1144               IAR Math Growth Percentile\n",
+       "1145               IAR Math Growth Percentile\n",
+       "1146               IAR Math Growth Percentile\n",
+       "2127        Average ISAT Reading Growth Value\n",
+       "2128        Average ISAT Reading Growth Value\n",
+       "2129    Average ISAT Mathematics Growth Value\n",
+       "2130    Average ISAT Mathematics Growth Value\n",
+       "Name: Metric, dtype: object"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "demo_inventory['Metric'][demo_inventory['Metric'].str.contains(\"Growth\")]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1826,7 +2035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1839,7 +2048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1853,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1897,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1907,14 +2116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [01:30<00:00,  9.05s/it]\n"
+      "100%|██████████| 10/10 [01:25<00:00,  8.59s/it]\n"
      ]
     }
    ],
@@ -1929,14 +2138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [18:43<00:00, 112.36s/it]\n"
+      "100%|██████████| 10/10 [12:50<00:00, 77.00s/it] \n"
      ]
     }
    ],
