Completed Step 2 of adding a new year of data for 2025

--- a/Historic Report Card Processing.ipynb
+++ b/Historic Report Card Processing.ipynb
@@ -63,11 +63,13 @@
     "}\n",
     "\n",
     "# Section 1, STEP 5: New demographics\n",
-    "DEMOGRAPHICS = ['Female', 'Male', 'White', 'Asian', 'Black', 'Latinx',\n",
+    "DEMOGRAPHICS = ['Female', 'Male', 'Non-binary', \n",
+    "       'White', 'Asian', 'Black', 'Latinx',\n",
     "       'American Indian or Alaska Native',\n",
     "       'Native Hawaiian or Other Pacific Islander', 'Two or More Races',\n",
-    "       'EL', 'IEP', 'Children with Disabilities', 'Low Income', 'Migrant', \n",
-    "       'Homeless', 'Youth in Care', 'Unknown']"
+    "       'Middle Eastern or North African',\n",
+    "       'EL', 'Former EL', 'Never EL', 'IEP', 'Children with Disabilities', 'Low Income', \n",
+    "       'Migrant', 'Homeless', 'Youth in Care', 'Unknown']"
    ]
   },
   {
@@ -2185,7 +2187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2207,6 +2209,8 @@
     "        'Am Ind/Alaska Nat', 'American Indian or Alaska Native')\n",
     "    report_card[year].columns = report_card[year].columns.str.replace(\n",
     "        'MultiRace', 'Two or More Races')\n",
+    "    report_card[year].columns = report_card[year].columns.str.replace(\n",
+    "        'MENA', 'Middle Eastern or North African')\n",
     "    report_card[year].columns = report_card[year].columns.str.replace(\n",
     "        'LowIncome', 'Low Income')\n",
     "    report_card[year].columns = report_card[year].columns.str.replace(\n",
